--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>⛵ Tidebreaker</h1>
 <canvas id="game" width="800" height="420"></canvas>
 <div id="ui">Distance: 0 m | Hull: 100 | Speed: 3.5 <button id="restart">Restart</button></div>
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
 </body>
 </html>
